add event click to banner homepage & adjust font size on bundling list

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -15,7 +15,7 @@
                 <ion-icon name="location" style="vertical-align: middle"></ion-icon>
               </ion-col>
               <ion-col size="8" size-sm size-md="5" size-lg="4" class="ion-no-padding truncate">
-                <ion-text class="location-text">Hypermart Gading Serpong - Boulevard</ion-text>
+                <ion-text class="location-text">KlikGo Cabang Kuta - Bali</ion-text>
               </ion-col>
             </ion-row>
           </ion-col>
