--- a/src/app/pages/home/home-bundling/home-bundling.component.scss
+++ b/src/app/pages/home/home-bundling/home-bundling.component.scss
@@ -1,5 +1,11 @@
 .section-title {
   text-transform: capitalize;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.section-desc {
+  font-size: 13px;
 }
 
 .img-banner {
