--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -159,27 +159,23 @@
       <ion-col size="6" class="ion-text-right text-payment-price">
         Rp. {{ paymentSummary?.original_price | number: '1.0-0':'id' }}
       </ion-col>
-      <!-- <ion-col size="6">
-        <span class="text-payment-info">{{'SERVICE_FEE' |translate}}</span>
+      <ion-col size="6" *ngIf="paymentSummary?.saved_price > 0">
+        <span class="text-payment-info text-saving">{{'SAVING' |translate}}</span>
       </ion-col>
-      <ion-col size="6" class="ion-text-right text-payment-price">
-        Rp. {{ paymentSummary?.service_fee | number: '1.0-0':'id' }}
-      </ion-col> -->
+      <ion-col size="6" class="ion-text-right text-payment-price text-saving" *ngIf="paymentSummary?.saved_price > 0">
+        Rp. {{ paymentSummary?.saved_price | number: '1.0-0':'id' }}
+      </ion-col>
       <ion-col size="6">
         <span class="text-payment-info">{{'DELIVERY_FEE' |translate}}</span>
       </ion-col>
       <ion-col size="6" class="ion-text-right text-payment-price">
         Rp. {{ paymentSummary?.delivery_fee | number: '1.0-0':'id' }}
       </ion-col>
-      <ion-col size="6" *ngIf="paymentSummary?.saved_price > 0">
-        <span class="text-payment-info">{{'DISCOUNT' |translate}}</span>
+      <ion-col size="6" *ngIf="paymentSummary?.discount > 0">
+        <span class="text-payment-info text-discount">{{'DISCOUNT' |translate}}</span>
       </ion-col>
-      <ion-col
-        size="6"
-        class="ion-text-right text-payment-price text-discount"
-        *ngIf="paymentSummary?.saved_price > 0 || paymentSummary?.discount > 0"
-      >
-        Rp. {{ paymentSummary?.saved_price + paymentSummary?.discount | number: '1.0-0':'id' }}
+      <ion-col size="6" class="ion-text-right text-payment-price text-discount" *ngIf="paymentSummary?.discount > 0">
+        Rp. {{ paymentSummary?.discount | number: '1.0-0':'id' }}
       </ion-col>
     </ion-row>
 
