--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -2,6 +2,10 @@ img {
   // border-radius: 7px;
 }
 
+ion-header {
+  border-bottom: 0px;
+}
+
 .ion-text-wrap {
   overflow: hidden;
   text-overflow: ellipsis;
