--- a/src/app/shared/common/cards/card-voucher/card-voucher.component.html
+++ b/src/app/shared/common/cards/card-voucher/card-voucher.component.html
@@ -8,7 +8,9 @@
     <ion-row class="ion-padding-horizontal">
       <ion-col size="7">
         <span class="text-voucher-code">{{ voucher?.voucher_code }} </span><br />
-        <small>{{ 'VALID_UNTIL' | translate }} {{ voucher?.end_date | date: 'longDate' }}</small>
+        <span class="text-voucher-desc">
+          {{ 'VALID_UNTIL' | translate }} {{ voucher?.end_date | date: 'longDate' }}
+        </span><br />
       </ion-col>
       <ion-col size="5" class="ion-text-right ion-align-self-center">
         <ion-text class="btn-use-voucher" (click)="useVoucher(voucher?.voucher_id)">
