Add image to detail page, fix rounded favorite list button, add generated address on address page

--- a/src/app/pages/address/address-form/address-form.component.html
+++ b/src/app/pages/address/address-form/address-form.component.html
@@ -192,7 +192,7 @@
 </ion-content>
 
 <ion-footer class="ion-no-border ion-padding-horizontal">
-  <ion-grid>
+  <ion-grid style="background: white;">
     <ion-row>
       <ion-col size="12">
         <ion-button
