--- a/src/app/pages/checkout/checkout.page.scss
+++ b/src/app/pages/checkout/checkout.page.scss
@@ -1,8 +1,7 @@
 .radio-wrapper {
   border: none;
   width: 100%;
-  padding-left: 0;
-  padding-bottom: 0;
+  padding: 0;
   margin-top: 0.5em;
   div {
     margin: auto;
@@ -56,6 +55,17 @@ small {
     letter-spacing: normal;
     color: #353535;
   }
+  &-discount-info {
+    font-size: 14px;
+    line-height: 1.17;
+    color: #99cc33;
+  }
+  &-discount-price {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.17;
+    color: #99cc33;
+  }
   &-payment-price {
     font-size: 14px;
     font-weight: 600;
@@ -82,4 +92,17 @@ small {
   & span {
     width: 100%;
   }
+}
+
+.btn-selected-date {
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 1.25;
+  --border-color : #99cc33;
+  --color: #262626 !important;
+}
+
+.date-selected {
+  color: #262626;
+  background-color: #99cc33;
 }
