--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,7 +9,7 @@
           <ion-col size="12" class="ion-no-padding location-title ion-padding-end"
             >{{'STORE_LOCATION' | translate}}</ion-col
           >
-          <ion-col size="12" class="ion-padding-end" (click)="changeLocation()">
+          <ion-col size="12" class="ion-padding-end">
             <ion-row class="ion-no-padding ion-align-items-center location-text">
               <ion-col size="4" size-sm class="ion-no-padding">
                 <ion-icon name="location" style="vertical-align: middle"></ion-icon>
