--- a/src/app/pages/qr/show-qr/show-qr.component.html
+++ b/src/app/pages/qr/show-qr/show-qr.component.html
@@ -1,20 +1,24 @@
-<ion-row>
-  <ion-col size="12" class="ion-text-center">
-    <ion-text>
-      <h3>{{ 'YOUR_QR_CODE' | translate }}</h3>
-    </ion-text>
+<ion-row class="ion-align-items-center ion-padding-horizontal">
+  <ion-col size="6" class="ion-text-left">
+    <ion-text class="text-name">{{userData?.full_name}}</ion-text><br />
+    <ion-text class="text-id">Member ID {{userData?.user_id}}</ion-text>
   </ion-col>
-  <ion-col size="12">
-    <ion-card class="card-qr">
-      <ion-card-content>
+  <ion-col size="6" class="ion-text-right ion-no-padding">
+    <img src="assets/images/qr-illustration.svg" class="qr-illustration">
+  </ion-col>
+</ion-row>
+<ion-row class="ion-padding-horizontal">
+  <ion-col size="12" class="ion-no-padding">
+    <ion-card class="card-qr ion-no-margin">
+      <ion-card-content class="ion-no-padding">
         <ion-row>
           <ion-col size="12" class="ion-text-center">
-            <ngx-qrcode
-              [elementType]="'url'"
-              [value]="'www.google.com'"
-              errorCorrectionLevel="L"
-              [scale]="90"
-            ></ngx-qrcode>
+            <div class="qr-overlay">
+              <img src="assets/images/qr-logo.svg" class="qr-logo">
+            </div>
+            <ngx-qrcode [elementType]="'url'" [margin]="1" [value]="'www.google.com'" errorCorrectionLevel="L"
+              [scale]="70">
+            </ngx-qrcode>
           </ion-col>
         </ion-row>
       </ion-card-content>
