Fix back button on QR page, fix icon placement on home page

--- a/src/app/pages/qr/qr.page.html
+++ b/src/app/pages/qr/qr.page.html
@@ -1,6 +1,6 @@
 <ion-header class="ion-no-border">
   <ion-toolbar mode="ios">
-    <ion-buttons slot="start">
+    <ion-buttons slot="start" mode="md">
       <ion-back-button icon="chevron-back"></ion-back-button>
     </ion-buttons>
     <ion-title>QR Code</ion-title>
