--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,11 +11,9 @@
           >
           <ion-col size="12" class="ion-padding-end">
             <ion-row class="ion-no-padding ion-align-items-center location-text">
-              <ion-col size="4" size-sm class="ion-no-padding">
+              <ion-col size="12" size-sm size-md="5" size-lg="4" class="ion-no-padding truncate">
                 <ion-icon name="location" style="vertical-align: middle"></ion-icon>
-              </ion-col>
-              <ion-col size="8" size-sm size-md="5" size-lg="4" class="ion-no-padding truncate">
-                <ion-text class="location-text">KlikGo Cabang Kuta - Bali</ion-text>
+                <ion-text class="location-text"> KlikGo Cabang Denpasar - Bali </ion-text>
               </ion-col>
             </ion-row>
           </ion-col>
