Fix item list padding, change icon on product detail add, fix related product search, adjust icon size on categories header

--- a/src/app/pages/home/home-categories/home-categories.component.html
+++ b/src/app/pages/home/home-categories/home-categories.component.html
@@ -1,9 +1,9 @@
 <ion-row>
-  <ion-col>
+  <ion-col class="ion-padding-start">
     <ion-text class="section-title">{{ 'CATEGORIES' | translate }}</ion-text>
   </ion-col>
 </ion-row>
-<ion-slides pager>
+<ion-slides pager class="ion-padding-bottom">
   <ion-slide *ngFor="let categories of categoriesChunk">
     <ion-grid>
       <ion-row class="ion-no-padding">
