--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -52,7 +52,7 @@
         <app-slide-promo [banners]="banners"></app-slide-promo>
       </ion-col>
     </ion-row>
-    <ion-row class="ion-padding">
+    <ion-row class="ion-padding-top">
       <ion-col>
         <app-home-categories></app-home-categories>
       </ion-col>
