--- a/src/app/pages/notification/notification-list/notification-list.component.html
+++ b/src/app/pages/notification/notification-list/notification-list.component.html
@@ -66,7 +66,7 @@
                   <ion-text class="notif-title">{{notif?.subject}}</ion-text>
                 </ion-col>
                 <ion-col size="12" class="ion-no-padding">
-                  <ion-text class="notif-desc">{{notif?.message}}</ion-text>
+                  <ion-text class="notif-desc" [innerHTML]="notif?.message"></ion-text>
                 </ion-col>
                 <ion-col size="12" class="ion-no-padding">
                   <ion-text class="notif-time"> {{ notif?.notification_created_at | date: 'medium' }}</ion-text>
