--- a/src/app/pages/product/product-detail/product-detail.component.html
+++ b/src/app/pages/product/product-detail/product-detail.component.html
@@ -8,16 +8,10 @@
     <!-- <ion-searchbar class="custom-search" placeholder="{{ 'SEARCH' | translate }}" [routerLink]="['/product/search']"></ion-searchbar> -->
     <ion-row class="ion-no-padding">
       <ion-col class="ion-no-padding" size="12">
-        <ion-searchbar
-          class="custom-search"
-          mode="ios"
-          placeholder="{{ 'SEARCH' | translate }}"
-          [routerLink]="['/product/search']"
-        ></ion-searchbar>
-        <div
-          class="ion-no-padding ion-align-self-center ion-text-center scan-icon-container"
-          (click)="scanQR(); $event.stopPropagation()"
-        >
+        <ion-searchbar class="custom-search" mode="ios" placeholder="{{ 'SEARCH' | translate }}"
+          [routerLink]="['/product/search']"></ion-searchbar>
+        <div class="ion-no-padding ion-align-self-center ion-text-center scan-icon-container"
+          (click)="scanQR(); $event.stopPropagation()">
           <img src="assets/images/scan.svg" class="scan-icon" />
         </div>
       </ion-col>
@@ -52,8 +46,7 @@
             <span class="product-size">Size: {{ productData?.weight }} {{ productData?.unit?.name }}</span>
             <br />
             <ion-text class="product-out-of-stock" *ngIf="productData?.stock < 5">
-              {{ 'STOCK' | translate }} < 5
-            </ion-text>
+              {{ 'STOCK' | translate }} < 5 </ion-text>
           </ion-col>
           <!-- <ion-col size="6" class="ion-no-padding ion-text-right">
             <ion-button color="primary" size="small" shape="round" (click)="addItemToCart()">
@@ -77,13 +70,11 @@
         </ion-row> -->
         <ion-row>
           <ion-col [style.visibility]="productData?.secondary_price ? 'unset' : 'hidden'">
-            <ion-badge style="font-size: 12px; --color: white; background-color: #f8a345; margin-right: 8px"
-              >{{
-                ((productData?.secondary_price - productData?.primary_price) / productData?.secondary_price) * 100
-                  | number: '1.0-0'
+            <ion-badge style="font-size: 12px; --color: white; background-color: #f8a345; margin-right: 8px">{{
+              ((productData?.secondary_price - productData?.primary_price) / productData?.secondary_price) * 100
+              | number: '1.0-0'
               }}
-              %</ion-badge
-            >
+              %</ion-badge>
             <span class="product-price price-linethrough">
               Rp {{ productData?.secondary_price | number: '1.0-0' }}
             </span>
@@ -94,12 +85,8 @@
             <span class="product-final-price">Rp {{ productData?.primary_price | number: '1.0-0':'id' }} </span>
           </ion-col>
           <ion-col size="1" class="ion-no-padding ion-text-right">
-            <ion-icon
-              color="primary"
-              style="font-size: 28px"
-              src="assets/images/add-favorite.svg"
-              (click)="addToFavorite()"
-            ></ion-icon>
+            <ion-icon color="primary" style="font-size: 28px" src="assets/images/add-favorite.svg"
+              (click)="addToFavorite()"></ion-icon>
           </ion-col>
         </ion-row>
       </ion-col>
@@ -116,8 +103,8 @@
 
     <div class="divider"></div>
 
-    <ion-row class="ion-padding-horizontal">
-      <ion-col size="12">
+    <ion-row>
+      <ion-col size="12" class="ion-padding-start">
         <ion-text class="text-desc-label">{{ 'RELATED_PRODUCT' | translate }}</ion-text>
       </ion-col>
       <ion-col size="12">
@@ -132,42 +119,21 @@
     <ion-col size="4" class="ion-text-center">
       <ion-row class="ion-align-items-center">
         <ion-col size="4">
-          <ion-icon
-            name="remove-outline"
-            size="small"
-            color="limegreen"
-            (click)="updateLocalQuantity(false)"
-            [ngClass]="{ disabled: qty < 1 }"
-          ></ion-icon>
+          <ion-icon src="/assets/images/remove-material.svg" style="font-size:10px" color="limegreen" (click)="updateLocalQuantity(false)"
+            [ngClass]="{ disabled: qty < 1 }"></ion-icon>
         </ion-col>
         <ion-col size="4" style="border: solid 2px #e2e2e2">{{ qty }}</ion-col>
         <ion-col size="4">
-          <ion-icon name="add-outline" size="small" (click)="updateLocalQuantity(true)"></ion-icon>
+          <ion-icon src="/assets/images/add-material.svg" style="font-size:10px" (click)="updateLocalQuantity(true)"></ion-icon>
         </ion-col>
       </ion-row>
     </ion-col>
     <ion-col size="8">
-      <ion-button
-        shape="round"
-        color="success"
-        expand="full"
-        (click)="addItemToCart()"
-        [ngClass]="{ disabled: qty < 1 || productData?.stock == 0 }"
-      >
+      <ion-button shape="round" color="success" expand="full" (click)="addItemToCart()"
+        [ngClass]="{ disabled: qty < 1 || productData?.stock == 0 }">
         {{ 'ADD_TO_CART' | translate }}
         <ion-spinner *ngIf="isOnFetch" name="dots" color="dark"></ion-spinner>
       </ion-button>
     </ion-col>
   </ion-row>
 </ion-footer>
-
-<!-- <ion-row>
-  <ion-col>
-    <ion-text>
-      Item has been added to cart
-    </ion-text>
-    <ion-button shape="round" color="success" expand="full">
-      {{ 'CHECK_CART' | translate }}
-    </ion-button>
-  </ion-col>
-</ion-row> -->
