--- a/src/app/shared/common/item-list-inactive/item-list-inactive.component.html
+++ b/src/app/shared/common/item-list-inactive/item-list-inactive.component.html
@@ -9,7 +9,7 @@
           <span class="product-name"><b>{{ cart?.product?.name || cart?.name }}</b></span>
         </ion-col>
       </ion-row>
-      <ion-row class="ion-align-items-center ion-justify-content-center">
+      <ion-row class="ion-align-items-center ion-justify-content-center ion-padding-top">
         <ion-col class="ion-no-padding grayed-out">
           <div class="product-price">
             {{ cart?.product?.secondary_price || cart?.secondary_price | currency: 'Rp. ' }}
