--- a/src/global.scss
+++ b/src/global.scss
@@ -482,3 +482,7 @@ ion-toolbar.transparent {
 .alert-radio-label.sc-ion-alert-ios {
     white-space: break-spaces;
 }
+
+.pt-small {
+  padding-top: 4px;
+}
