--- a/src/app/pages/product/product-detail/product-detail.component.scss
+++ b/src/app/pages/product/product-detail/product-detail.component.scss
@@ -39,7 +39,7 @@ ion-header {
     text-transform: capitalize;
   }
   &-size {
-    font-size: 15px;
+    font-size: 15px !important;
     font-weight: 400;
     line-height: 1.5;
     color: #262626;
