--- a/src/app/shared/common/cards/card-category/card-category.component.html
+++ b/src/app/shared/common/cards/card-category/card-category.component.html
@@ -1,5 +1,5 @@
 <ion-row>
-  <ion-col class="ion-text-center ion-padding-vertical" (click)="goToProductByCategory(category?.category_id)">
+  <ion-col class="ion-text-center" (click)="goToProductByCategory(category?.category_id)">
     <ion-row>
       <ion-col size="12">
         <img [src]="category?.icon_url" class="cat-icon rounded" *ngIf="category?.icon_url" />
