--- a/src/app/pages/product/product-list/product-list.component.html
+++ b/src/app/pages/product/product-list/product-list.component.html
@@ -3,7 +3,7 @@
     <ion-buttons mode="md" class="ion-text-center">
       <ion-back-button icon="chevron-back" defaultHref="/product/search" icon="chevron-back-outline"> </ion-back-button>
     </ion-buttons>
-    <ion-title class="header-title center-with-back">{{ 'SEARCH_RESULT' | translate }}</ion-title>
+    <ion-title>{{ 'SEARCH_RESULT' | translate }}</ion-title>
   </ion-toolbar>
 
   <ion-toolbar *ngIf="search" mode="ios">
