--- a/src/app/pages/product/product-search/product-search.component.html
+++ b/src/app/pages/product/product-search/product-search.component.html
@@ -2,8 +2,8 @@
   <ion-toolbar mode="ios">
     <ion-buttons mode="md" class="ion-text-center">
       <ion-back-button icon="chevron-back" defaultHref="/tabs/home" icon="chevron-back-outline"> </ion-back-button>
-      <ion-title class="header-title center-with-back">{{ 'SEARCH' | translate }}</ion-title>
     </ion-buttons>
+    <ion-title>{{ 'SEARCH' | translate }}</ion-title>
   </ion-toolbar>
 
   <ion-toolbar mode="ios">
