--- a/src/app/pages/payment/payment-cod/payment-cod.component.html
+++ b/src/app/pages/payment/payment-cod/payment-cod.component.html
@@ -1,9 +1,9 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-buttons mode="md" class="ion-text-center">
       <ion-back-button defaultHref="/payment" icon="chevron-back-outline"> </ion-back-button>
-      <ion-title class="header-title center-with-back">{{ 'COD' | translate }}</ion-title>
     </ion-buttons>
+    <ion-title>{{ 'COD' | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
@@ -35,15 +35,9 @@
       <form (ngSubmit)="pay()" #codForm="ngForm" [formGroup]="fg">
         <div class="form-group">
           <ion-item lines="none">
-            <ion-input
-              class="default-theme"
-              placeholder="Rp. 000.000"
-              class="ion-text-right"
-              (ngModelChange)="amountChanged($event)"
-              [ngModel]="amountCod"
-              [ngModelOptions]="{ standalone: true }"
-              maxlength="16"
-            ></ion-input>
+            <ion-input class="default-theme" placeholder="Rp. 000.000" class="ion-text-right"
+              (ngModelChange)="amountChanged($event)" [ngModel]="amountCod" [ngModelOptions]="{ standalone: true }"
+              maxlength="16"></ion-input>
             <br />
           </ion-item>
           <small *ngIf="fg.controls.amount.dirty">{{ fg.controls.amount.errors?.required?.message }}</small>
