--- a/src/app/pages/payment/payment-proof/payment-proof.component.html
+++ b/src/app/pages/payment/payment-proof/payment-proof.component.html
@@ -1,9 +1,9 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-buttons mode="md" class="ion-text-center">
       <ion-back-button [defaultHref]="previousUrl" icon="chevron-back-outline"> </ion-back-button>
-      <ion-title class="header-title center-with-back">{{ 'PAYMENT' | translate }}</ion-title>
     </ion-buttons>
+    <ion-title>{{ 'PAYMENT' | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
