--- a/src/app/pages/voucher/voucher-detail/voucher-detail.component.html
+++ b/src/app/pages/voucher/voucher-detail/voucher-detail.component.html
@@ -1,9 +1,9 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-buttons mode="md" class="ion-text-center">
       <ion-back-button defaultHref="/checkout" icon="chevron-back-outline"> </ion-back-button>
-      <ion-title class="header-title center-with-back">{{ voucher?.voucher_code }}</ion-title>
     </ion-buttons>
+    <ion-title>{{ voucher?.voucher_code }}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
