--- a/src/app/pages/voucher/voucher-list/voucher-list.component.html
+++ b/src/app/pages/voucher/voucher-list/voucher-list.component.html
@@ -1,9 +1,9 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-buttons mode="md" class="ion-text-center">
       <ion-back-button defaultHref="/checkout" icon="chevron-back-outline"> </ion-back-button>
-      <ion-title class="header-title center-with-back">{{ 'VOUCHER_LIST' | translate }}</ion-title>
     </ion-buttons>
+    <ion-title>{{ 'VOUCHER_LIST' | translate }}</ion-title>
   </ion-toolbar>
   <ion-toolbar style="padding: 8px 16px">
     <ion-searchbar
