--- a/src/app/pages/product/product-search/product-search.component.html
+++ b/src/app/pages/product/product-search/product-search.component.html
@@ -7,21 +7,23 @@
   </ion-toolbar>
 
   <ion-toolbar mode="ios">
-    <div>
-      <ion-searchbar
-        class="custom-search"
-        mode="ios"
-        (ionChange)="searchProduct($event)"
-        debounce="1000"
-        value="{{ keyword }}"
-      ></ion-searchbar>
-    </div>
-    <ion-buttons slot="end">
-      <ion-button (click)="showFilter()">
-        <ion-icon name="funnel" slot="start" class="header-action-size"></ion-icon>
-        <ion-text class="header-action-size"> {{ 'FILTER' | translate }} </ion-text>
-      </ion-button>
-    </ion-buttons>
+    <ion-row class="ion-justify-content-center ion-align-items-center">
+      <ion-col size="10">
+        <ion-searchbar
+          class="custom-search"
+          mode="ios"
+          (ionChange)="searchProduct($event)"
+          debounce="1000"
+          value="{{ keyword }}"
+        ></ion-searchbar>
+      </ion-col>
+      <ion-col size="2">
+        <div (click)="showFilter()">
+          <ion-icon name="funnel" slot="start" class="header-action-size" size="medium"></ion-icon>
+          <ion-text class="header-action-size" size="medium"> {{ 'FILTER' | translate }} </ion-text>
+        </div>
+      </ion-col>
+    </ion-row>
   </ion-toolbar>
 </ion-header>
 
