--- a/src/app/pages/my-order/my-order-list/my-order-list.component.html
+++ b/src/app/pages/my-order/my-order-list/my-order-list.component.html
@@ -7,6 +7,9 @@
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="onRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-segment color="primary" (ionChange)="segmentChanged($event)" [value]="segmentValue">
     <ion-segment-button value="ongoing">
       <ion-label>{{ 'ON_GOING' | translate }}</ion-label>
