--- a/src/app/pages/product/product-search/product-search.component.html
+++ b/src/app/pages/product/product-search/product-search.component.html
@@ -15,6 +15,7 @@
           (ionChange)="searchProduct($event)"
           debounce="1000"
           value="{{ keyword }}"
+          #searchBar
         ></ion-searchbar>
       </ion-col>
       <ion-col size="2">
