--- a/src/app/pages/address/address.page.html
+++ b/src/app/pages/address/address.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-refresher slot="fixed" (ionRefresh)="fetchAddressList($event)">
+  <ion-refresher slot="fixed" (ionRefresh)="fetchAddressList($event)" pullFactor="1.2" pullMin="20" pullMax="80">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <ion-grid class="ion-padding-top ion-padding-horizontal h-100">
