--- a/src/app/pages/cart/cart.page.html
+++ b/src/app/pages/cart/cart.page.html
@@ -5,17 +5,14 @@
 </ion-header>
 
 <ion-content>
-  <ion-refresher slot="fixed" (ionRefresh)="pullToRefresh($event)">
+  <ion-refresher slot="fixed" (ionRefresh)="pullToRefresh($event)" pullFactor="1.2" pullMin="20" pullMax="80">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <ion-grid class="ion-no-padding h-100" *ngIf="cartList?.length > 0">
     <ion-row class="ion-padding-horizontal ion-justify-content-between">
       <ion-col size="12">
-        <app-item-list
-          [cartData]="cartList"
-          (afterDeleteItem)="fetchCartList()"
-          (quantityChange)="updateTotalPrice($event)"
-        ></app-item-list>
+        <app-item-list [cartData]="cartList" (afterDeleteItem)="fetchCartList()"
+          (quantityChange)="updateTotalPrice($event)"></app-item-list>
       </ion-col>
     </ion-row>
     <div class="divider"></div>
@@ -28,10 +25,8 @@
       <div class="divider"></div>
       <ion-row class="ion-padding-horizontal ion-justify-content-between">
         <ion-col size="12">
-          <app-item-list-inactive
-            [cartData]="unprocessableCartList"
-            (afterCta)="fetchCartList()"
-          ></app-item-list-inactive>
+          <app-item-list-inactive [cartData]="unprocessableCartList" (afterCta)="fetchCartList()">
+          </app-item-list-inactive>
         </ion-col>
       </ion-row>
       <div class="divider"></div>
@@ -47,7 +42,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-grid *ngIf="cartList?.length <= 0" class="ion-text-center ion-padding ion-margin">
+  <ion-grid *ngIf="cartList?.length && cartList?.length <= 0" class="ion-text-center ion-padding ion-margin">
     <ion-row>
       <ion-col>
         <img src="assets/images/empty-cart.svg" />
@@ -80,12 +75,8 @@
           <span><b>Rp. {{totalPrice | number}}</b></span>
         </ion-col>
         <ion-col size="6" class="ion-text-right ion-no-padding">
-          <ion-button
-            color="limegreen"
-            size="small"
-            [disabled]="unprocessableCartList.length > 0"
-            (click)="goToCheckout()"
-          >
+          <ion-button color="limegreen" size="small" [disabled]="unprocessableCartList.length > 0"
+            (click)="goToCheckout()">
             {{'CHECKOUT' | translate}}
           </ion-button>
         </ion-col>
