--- a/src/global.scss
+++ b/src/global.scss
@@ -47,7 +47,7 @@ ion-header {
   border-bottom: 8px solid #f5f5f5;
 }
 
-* > ion-button { 
+* > ion-button {
   --ripple-color: transparent;
 }
 
@@ -73,7 +73,7 @@ ion-header {
       padding-left: 16px;
     }
     .native-input::placeholder {
-      color:#353535;
+      color: #353535;
     }
   }
   ion-icon {
@@ -89,7 +89,7 @@ ion-header {
   ion-select,
   ion-datetime {
     --padding-start: 16px;
-    --placeholder-color:#353535;
+    --placeholder-color: #353535;
     font-size: 14px;
 
     .native-textarea {
@@ -164,7 +164,7 @@ ion-item {
 }
 
 .modal-add-favorite .modal-wrapper {
-  height: 21%;
+  height: 170px;
   width: 80%;
   position: absolute;
   display: block;
@@ -480,7 +480,7 @@ ion-toolbar.transparent {
 
 .alert-radio-label.sc-ion-alert-md,
 .alert-radio-label.sc-ion-alert-ios {
-    white-space: break-spaces;
+  white-space: break-spaces;
 }
 
 .pt-small {
